--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,124 +1,130 @@
 .header-top {
-    display: flex;
-    justify-content: space-between;
-    align-items: start;
-    padding: 10px 10px 10px 10px;
-    background-color: var(--color-background);
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+  padding: 10px 10px 10px 10px;
+  background-color: var(--color-background);
 }
 .header-top p {
-    flex: 1;
-    text-align: center;
+  flex: 1;
+  text-align: center;
 }
 .header-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin: 0 auto;
 }
 
 .nav-links {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    gap: 15px;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  gap: 15px;
 }
 .nav-links li a {
-    text-decoration: none;
-    color: var(--dropdown-text-color) !important;
-    padding: 5px 10px;
-    transition: background-color 0.3s;
+  text-decoration: none;
+  color: var(--dropdown-text-color) !important;
+  padding: 5px 10px;
+  transition: background-color 0.3s;
 }
 .nav-links a:hover {
-    text-decoration: underline;
-    background-color: var(--dropdown-container-color); /* Add a hover effect for better UX */
+  text-decoration: underline;
+  background-color: var(
+    --dropdown-container-color
+  ); /* Add a hover effect for better UX */
 }
 
 .login-buttons {
-    display: grid;  /* Side by side buttons */
-    gap: 10px;      /* Space between buttons */
+  display: grid; /* Side by side buttons */
+  gap: 10px; /* Space between buttons */
 }
 button {
-    border-radius: 10px;
-    color: white;
-    padding: 6px 1px;
-    border: none;
-    cursor: pointer;
-    transition: background-color 0.3s;
-    text-align: center;
-    width: 7rem;
-    margin-right: 10px;
+  border-radius: 10px;
+  color: white;
+  padding: 6px 1px;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  text-align: center;
+  width: 7rem;
+  margin-right: 10px;
 }
 
 button.business {
-    background-color: #ff5a5f;
+  background-color: #ff5a5f;
   color: var(--mobile-menu-text-color);
 }
 button.business:hover {
-    background-color: #e55055;
+  background-color: #e55055;
 }
 button.user {
-    background-color: #4a90e2;
+  background-color: #4a90e2;
   color: var(--mobile-menu-text-color);
 }
 button.user:hover {
-    background-color: #4180c6;
+  background-color: #4180c6;
 }
 
 .dropdown {
-    position: relative;
-    display: inline-block;
+  position: relative;
+  display: inline-block;
 }
 .dropbtn {
-    /*background-color: darkgray;*/
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
+  /*background-color: darkgray;*/
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
 }
 
 .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: var(--dropdown-container-color) !important;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+  display: none;
+  position: absolute;
+  background-color: var(--dropdown-container-color) !important;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
 }
 /* Style for dropdown links and text color*/
 .dropdown-content a {
-    color: var(--dropdown-text-color) !important;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
+  color: var(--dropdown-text-color) !important;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
 }
 /* Display the dropdown content on hover */
 .dropdown:hover .dropdown-content {
-    display: block;
+  display: block;
 }
 /* Change background color of dropdown links on hover */
 .dropdown-content a:hover {
-    background-color: var(--dropdown-hover-color);
+  background-color: var(--dropdown-hover-color);
 }
 
-.mobile-menu-icon, .mobile-menu {
+.mobile-menu-icon,
+.mobile-menu {
   display: none;
 }
-
 
 @media (max-width: 768px) {
   ul {
     padding: 0;
   }
-  .mobile-menu-icon, .mobile-menu {
+  .mobile-menu-icon,
+  .mobile-menu {
     display: revert;
   }
-  .nav-links, .dropdown {
+  .nav-links,
+  .dropdown {
     display: none;
   }
-  button, .cta-button, a {
+  button,
+  .cta-button,
+  a {
     min-width: 44px;
     min-height: 44px;
   }
@@ -136,7 +142,7 @@ button.user:hover {
     max-width: 500px;
     height: 100%;
     background: var(--mobile-menu-bg-color);
-    box-shadow: 4px 0px 16px rgba(0,0,0,0.7);
+    box-shadow: 4px 0px 16px rgba(0, 0, 0, 0.7);
     transition: transform 0.3s ease;
     z-index: 1000;
   }
@@ -151,15 +157,15 @@ button.user:hover {
     display: block; /* This makes sure that the links take up the full available width */
   }
 
-    /* Ensure the link and the pseudo-element fit on one line */
-    .mobile-menu-item .mobile-dropbtn {
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-    }
+  /* Ensure the link and the pseudo-element fit on one line */
+  .mobile-menu-item .mobile-dropbtn {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+  }
   /* Toggle the dropdown within the mobile menu */
   .mobile-menu-item .mobile-dropbtn:after {
-    content: ' ▼'; /* Add a small arrow to denote that this is a dropdown */
+    content: " ▼"; /* Add a small arrow to denote that this is a dropdown */
   }
   .mobile-menu-item,
   .mobile-dropdown-content {
@@ -175,5 +181,3 @@ button.user:hover {
     display: block;
   }
 }
-
-
