--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -4,26 +4,26 @@ footer {
   flex-direction: column;
   align-items: center;
   padding: 1rem 0;
-  background-color: #605E5E; /* Choose your preferred color */
-  color: #FFF; /* Choose your preferred color */
+  background-color: #605e5e; /* Choose your preferred color */
+  color: #fff; /* Choose your preferred color */
 }
 .footer-header {
-    margin: 1rem;
-    display: flex;
-    padding: 0 0 0 4rem;
+  margin: 1rem;
+  display: flex;
+  padding: 0 0 0 4rem;
 }
 .footer-header p {
-    flex: 1; /* Allow the text to take up remaining space */
-    text-align: center; /* Align text to the right */
+  flex: 1; /* Allow the text to take up remaining space */
+  text-align: center; /* Align text to the right */
 }
 .info-container {
-    display: flex;
-    flex-direction: row;
-    margin: 12px 0; /* Reduce margin top and bottom */
+  display: flex;
+  flex-direction: row;
+  margin: 12px 0; /* Reduce margin top and bottom */
 }
 .info-container p {
-    font-size: 14px;
-    margin: 0 0; /* Reduce margin top and bottom */
+  font-size: 14px;
+  margin: 0 0; /* Reduce margin top and bottom */
 }
 
 .footer-socials {
@@ -31,14 +31,14 @@ footer {
   gap: 15px;
 }
 .footer-socials a {
-  color: #FFF;
+  color: #fff;
   text-decoration: none;
 }
 
 .footer-links-container {
   display: flex;
   justify-content: center;
-    padding: 10px 10px 10px 10px;
+  padding: 10px 10px 10px 10px;
 }
 .footer-links {
   list-style-type: none;
@@ -46,8 +46,9 @@ footer {
 .footer-links li {
   margin-bottom: 0.5rem; /* Spacing between links */
 }
-.footer-links a, .info-container a {
-  color: #FFF;
+.footer-links a,
+.info-container a {
+  color: #fff;
   text-decoration: none;
 }
 .footer-links a:hover {
@@ -56,15 +57,16 @@ footer {
 
 /* Media Query for mobile devices */
 @media (max-width: 768px) {
-    .footer-socials {
-        flex-direction: row;
-        gap: 0;
-    }
-  .info-container, .footer-links {
+  .footer-socials {
+    flex-direction: row;
+    gap: 0;
+  }
+  .info-container,
+  .footer-links {
     /*width: 100%; !* Make each section take full width *!*/
     text-align: center; /* Center align the text for all */
   }
-    .footer-header{
-        margin-bottom: 0;
-    }
+  .footer-header {
+    margin-bottom: 0;
+  }
 }
