--- a/src/components/index.css
+++ b/src/components/index.css
@@ -9,7 +9,8 @@
   display: grid;
   justify-content: center;
 }
-.why-fyncom h2, .why-fyncom p {
+.why-fyncom h2,
+.why-fyncom p {
   text-align: center;
 }
 
@@ -18,7 +19,7 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  flex: 1;                 /* Takes equal space as the text-block */
+  flex: 1; /* Takes equal space as the text-block */
 }
 
 .top-logos {
@@ -44,13 +45,13 @@
 
 .text-block {
   margin-left: 1rem;
-  flex: 1;                 /* Takes equal space as the logo-container */
-  max-width: 600px;        /* Adjust as needed */
+  flex: 1; /* Takes equal space as the logo-container */
+  max-width: 600px; /* Adjust as needed */
 }
 .text-block-left {
   margin-right: 1rem;
-  flex: 1;                 /* Takes equal space as the logo-container */
-  max-width: 600px;        /* Adjust as needed */
+  flex: 1; /* Takes equal space as the logo-container */
+  max-width: 600px; /* Adjust as needed */
 }
 
 /* social media css*/
@@ -59,7 +60,7 @@
   display: flex;
   align-items: center; /* Vertically centers children */
   justify-content: center; /* Horizontally centers children */
-  width: 100%;            /* Use the full width of the App container */
+  width: 100%; /* Use the full width of the App container */
   max-width: 1200px;
   padding: 0.2rem;
   max-height: 600px;
@@ -68,13 +69,14 @@
   display: flex;
   align-items: center;
   gap: 2rem;
-  width: 100%;            /* Use the full width of the App container */
-  max-width: 1200px;      /* Adjust as needed */
+  width: 100%; /* Use the full width of the App container */
+  max-width: 1200px; /* Adjust as needed */
 }
 
-
 /* bits and pieces*/
-.AppText .span, .AppText .span a, .text-wrapper-3-red {
+.AppText .span,
+.AppText .span a,
+.text-wrapper-3-red {
   color: var(--fyncom-red);
   padding: 0;
 }
@@ -93,14 +95,14 @@
   flex: 1;
   justify-content: center;
   padding: 0; /* Reset padding */
-  border: none ; /* Reset border */
+  border: none; /* Reset border */
   margin: 0; /* Reset margin */
   max-width: fit-content; /* Use 'fit-content' to shrink-wrap the content */
 }
 .gatsby-image-wrapper {
-    max-width: 100%; /* Ensure it doesn't stretch beyond its container */
-    height: auto; /* Maintain aspect ratio */
-    display: block; /* Make sure it behaves like a block-level element */
+  max-width: 100%; /* Ensure it doesn't stretch beyond its container */
+  height: auto; /* Maintain aspect ratio */
+  display: block; /* Make sure it behaves like a block-level element */
 }
 
 @media (max-width: 768px) {
@@ -108,17 +110,17 @@
     padding: 1rem;
     flex-direction: column; /* Stack the child elements vertically */
   }
-    .social-media-container.communities {
-        flex-direction: column-reverse;
-    }
-    .top-logos.communities {
-        flex-direction: row; /* Arrange the logos horizontally */
-        justify-content: center;
-    }
-    /*.bottom-logo.community {*/
-    /*    flex-direction: row; !* Arrange the logos horizontally *!*/
-    /*    justify-content: center;*/
-    /*}*/
+  .social-media-container.communities {
+    flex-direction: column-reverse;
+  }
+  .top-logos.communities {
+    flex-direction: row; /* Arrange the logos horizontally */
+    justify-content: center;
+  }
+  /*.bottom-logo.community {*/
+  /*    flex-direction: row; !* Arrange the logos horizontally *!*/
+  /*    justify-content: center;*/
+  /*}*/
   .social-media-container,
   .text-block,
   .text-block-left,
@@ -129,12 +131,14 @@
     text-align: center; /* Center the text for mobile */
     max-width: 100%; /* Override any max-width set for larger screens */
   }
-  .logo-container, .bottom-logo {
-    width: 100%;        /* Take the full width of the container on small screens */
+  .logo-container,
+  .bottom-logo {
+    width: 100%; /* Take the full width of the container on small screens */
     justify-content: space-evenly; /* Evenly space logos horizontally on small screens */
     gap: 0;
   }
-  .text-block, .text-block-left {
+  .text-block,
+  .text-block-left {
     margin: 1rem 0; /* Add some top and bottom margin for spacing */
     padding: 0 1rem; /* Add padding to ensure text doesn't touch the edges */
   }
@@ -142,5 +146,3 @@
     text-align: center;
   }
 }
-
-
