--- a/src/components/index.css
+++ b/src/components/index.css
@@ -88,6 +88,11 @@
   margin-bottom: 1rem;
   font-size: 36px;
 }
+.underline-red {
+    text-decoration: underline;
+    color: var(--fyncom-red);
+    padding: 0;
+}
 
 .index-links {
   display: inline-flex; /* or 'inline-block' depending on your layout needs */
